Use multiple from() instead explicit file collection creation for "avoidJdkCollectionApi" snippet
Signed-off-by: Anton Lakotka <antoha.by@gmail.com>

--- a/platforms/documentation/docs/src/docs/userguide/best-practices/best_practices_tasks.adoc
+++ b/platforms/documentation/docs/src/docs/userguide/best-practices/best_practices_tasks.adoc
@@ -214,7 +214,7 @@ include::sample[dir="snippets/bestPractices/avoidJdkCollectionApiOnFileCollectio
 include::sample[dir="snippets/bestPractices/avoidJdkCollectionApiOnFileCollections/groovy",files="build.gradle[tags=good-zipping-task]"]
 ====
 
-<1> *Use ConfigurableFileCollection*: This allows combining file collections without their implicit resolution.
+<1> *Pass files separately*: This allows combining file collections without their implicit resolution.
 
 === Tags
 `#tasks`, `#inputs-and-outputs`, `#configurations`
