Rename Avoid Redundant Dependency Decrlaration Best Practice
Co-authored-by: Laura Kassovic <lkassovic@gradle.com>
Signed-off-by: Anton Lakotka <antoha.by@gmail.com>

--- a/platforms/documentation/docs/src/docs/userguide/best-practices/bp_general.adoc
+++ b/platforms/documentation/docs/src/docs/userguide/best-practices/bp_general.adoc
@@ -180,7 +180,7 @@ include::sample[dir="snippets/bestPractices/avoidInternal/groovy",files="build.g
 `<<tags_reference.adoc#tag:upgrades,#upgrades>>`
 
 [[avoid_duplicate_dependencies]]
-== Avoid Declaring Dependencies Multiple Times
+== Avoid Redundant Dependency Declarations
 
 You should avoid duplicating dependencies in your build scripts, whether with different versions or in different dependency configurations.
 
