Update tag reference for dependency management best practice
Signed-off-by: Anton Lakotka <antoha.by@gmail.com>

--- a/platforms/documentation/docs/src/docs/userguide/best-practices/bp_dependencies.adoc
+++ b/platforms/documentation/docs/src/docs/userguide/best-practices/bp_dependencies.adoc
@@ -233,4 +233,4 @@ include::sample[dir="snippets/bestPractices/avoidDuplicateDependencies/groovy",f
 <1> Declare dependency once
 
 === Tags
-`#dependency-management`
+`<<tags_reference.adoc#tag:dependencies,#dependencies>>`
