Update tag references in best practices documentation
Signed-off-by: Anton Lakotka <antoha.by@gmail.com>

--- a/platforms/documentation/docs/src/docs/userguide/best-practices/best_practices_tasks.adoc
+++ b/platforms/documentation/docs/src/docs/userguide/best-practices/best_practices_tasks.adoc
@@ -146,7 +146,7 @@ include::sample[dir="snippets/bestPractices/useCacheabilityAnnotations-do/groovy
 - <<build_cache_concepts.adoc#non_cacheable_tasks,Non-cacheable Tasks>>
 
 === Tags
-`#tasks`, `#caching`
+`<<tags_reference.adoc#tag:tasks,#tasks>>`, `<<tags_reference.adoc#tag:caching,#caching>>`
 
 == Don't resolve Configurations before Task Execution
 
@@ -188,7 +188,7 @@ include::sample[dir="snippets/bestPractices/avoidResolvingConfigurationsManually
 <4> *Consume actual jar file or classes directory to calculate digest*: Here all files should exist at this point.
 
 === Tags
-`#tasks`, `#inputs-and-outputs`, `#configurations`
+`<<tags_reference.adoc#tag:tasks,#tasks>>`, `<<tags_reference.adoc#tag:inputs-and-outputs,#inputs-and-outputs>>`, `<<tags_reference.adoc#tag:inputs-and-outputs,#configurations>>`
 
 == Avoid using eager APIs on File Collections before Task Execution
 
@@ -218,77 +218,4 @@ include::sample[dir="snippets/bestPractices/avoidJdkCollectionApiOnFileCollectio
 <1> *Pass files separately*: This allows combining file collections without their implicit resolution.
 
 === Tags
-`#tasks`, `#inputs-and-outputs`, `#configurations`
-
-[[group_describe_tasks]]
-== Group and Describe custom Tasks
-
-When defining custom task types or registering ad-hoc tasks, always set a clear `group` and `description`.
-
-=== Explanation
-
-A good group name is short, lowercase, and reflects the purpose or domain of the task.
-For example: `documentation`, `verification`, `release`, or `publishing`.
-
-Before creating a new group, look for an existing group name that aligns with your task’s intent.
-It’s often better to reuse an established category to keep the task output organized and familiar to users.
-
-This information is used in the <<command_line_interface.adoc#sec:listing_tasks,Tasks Report>> (shown via `./gradlew tasks`) to group and describe available tasks in a readable format.
-
-Providing a group and description ensures that your tasks are:
-
-* Displayed clearly in the report
-* Categorized appropriately
-* Understandable to other users (and to your future self)
-
-NOTE: Tasks with no group are hidden from the <<command_line_interface.adoc#sec:listing_tasks,Tasks Report>> unless `--all` is specified.
-
-=== Example
-
-==== Don't Do This
-
-Tasks without a group appear under the "other" category in `./gradlew tasks --all` output, making them harder to locate:
-
-====
-include::sample[dir="snippets/bestPractices/groupTasks-avoid/kotlin",files="app/build.gradle.kts[tags=avoid-this]"]
-include::sample[dir="snippets/bestPractices/groupTasks-avoid/groovy",files="app/build.gradle[tags=avoid-this]"]
-====
-
-[source,text]
-----
-$ gradlew :app:tasks --all
-include::{snippetsPath}/bestPractices/groupTasks-avoid/tests/groupTasks.bad.out[]
-----
-
-==== Do this Instead
-
-When defining custom tasks, always assign a clear `group` and `description`:
-
-++++
-<div style="text-align: right;">
-  <a class="download-project-link"
-     data-base-path="https://github.com/gradle/gradle/tree/master/platforms/documentation/docs/src/snippets/bestPractices/groupTasks-do/"
-     href="https://download-directory.github.io/?url=https://github.com/gradle/gradle/tree/master/platforms/documentation/docs/src/snippets/bestPractices/groupTasks-do/kotlin">
-    <img src="https://img.shields.io/badge/Download%20Project-GitHub-blue?logo=github&style=flat" alt="Download"/>
-  </a>
-</div>
-++++
-
-====
-include::sample[dir="snippets/bestPractices/groupTasks-do/kotlin",files="app/build.gradle.kts[tags=do-this]"]
-include::sample[dir="snippets/bestPractices/groupTasks-do/groovy",files="app/build.gradle[tags=do-this]"]
-====
-
-[source,text]
-----
-$ gradlew :app:tasks --all
-include::{snippetsPath}/bestPractices/groupTasks-do/tests/groupTasks.good.out[]
-----
-
-=== References
-
-- <<writing_tasks.adoc#task_group_and_description,Task Group and Description>>
-
-=== Tags
-
-`<<tags_reference.adoc#tag:tasks,#tasks>>`
+`<<tags_reference.adoc#tag:tasks,#tasks>>`, `<<tags_reference.adoc#tag:inputs-and-outputs,#inputs-and-outputs>>`, `<<tags_reference.adoc#tag:inputs-and-outputs,#configurations>>`
