--- a/platforms/documentation/docs/src/docs/userguide/best-practices/tags_reference.adoc
+++ b/platforms/documentation/docs/src/docs/userguide/best-practices/tags_reference.adoc
@@ -17,8 +17,6 @@
 
 Here you can find a brief explanation of all the tags used in the best practices documentation.
 
-[horizontal]
-
 [[tag:caching]]
 `#caching` :: Items that are related to using Gradle's various caching mechanisms, such as <<build_cache.adoc#sec:task_output_caching,caching tasks>>.
 
@@ -35,7 +33,7 @@ Here you can find a brief explanation of all the tags used in the best practices
 `#tasks` :: Items that explain the proper way to <<writing_tasks.adoc#sec:sample_task,write tasks>> in Gradle, and common footguns involved in task authoring.
 
 [[tag:structuring-builds]]
-`#inputs-and-outputs` :: Items that explain the proper way to structure maintainable builds in Gradle.
+`#structuring-builds` :: Items that explain the proper way to <<multi_project_builds.adoc#multi_project_builds,structure maintainable builds>> in Gradle.
 
 [[tag:kotlin-dsl]]
 `#kotlin-dsl` :: Items that explain the benefits of using the <<kotlin_dsl.adoc#kotdsl:kotlin_dsl,Kotlin DSL>> and how to adopt it effectively.
