--- a/platforms/documentation/docs/src/docs/userguide/running-builds/features/file_system_watching.adoc
+++ b/platforms/documentation/docs/src/docs/userguide/running-builds/features/file_system_watching.adoc
@@ -14,6 +14,7 @@
 
 [[sec:daemon_watch_fs]]
 = File System Watching
+:keywords: file,system,watching
 
 Gradle maintains a Virtual File System (VFS) to calculate what needs to be rebuilt on repeat builds of a project.
 By watching the file system, Gradle keeps the VFS current between builds.
