--- a/platforms/documentation/docs/src/docs/userguide/running-builds/tutorial/part1_gradle_init.adoc
+++ b/platforms/documentation/docs/src/docs/userguide/running-builds/tutorial/part1_gradle_init.adoc
@@ -268,6 +268,14 @@ Gradle reads the `settings.gradle(.kts)` file to figure out which subprojects co
 
 Take a look at the file in your project:
 
+++++
+<div style="text-align: right;">
+  <a href="https://github.com/gradle/gradle/tree/master/platforms/documentation/docs/src/snippets/init/generated">
+    <img src="https://img.shields.io/badge/View%20full%20project-GitHub-blue?logo=github&style=flat" alt="View full sample project on GitHub"/>
+  </a>
+</div>
+++++
+
 ====
 include::sample[dir="snippets/init/generated/kotlin",files="settings.gradle.kts[]"]
 include::sample[dir="snippets/init/generated/groovy",files="settings.gradle[]"]
