--- a/platforms/documentation/docs/src/docs/userguide/running-builds/features/continuous_builds.adoc
+++ b/platforms/documentation/docs/src/docs/userguide/running-builds/features/continuous_builds.adoc
@@ -14,6 +14,7 @@
 
 [[continuous_builds]]
 = Continuous Builds
+:keywords: continuous,builds
 
 Continuous Build allows you to automatically re-execute the requested tasks when file inputs change.
 You can execute the build in this mode using the `-t` or `--continuous` command-line option.
