--- a/platforms/documentation/docs/src/docs/userguide/running-builds/features/gradle_daemon.adoc
+++ b/platforms/documentation/docs/src/docs/userguide/running-builds/features/gradle_daemon.adoc
@@ -318,7 +318,7 @@ $ ./gradlew updateDaemonJvm --jvm-version=17 --jvm-vendor=adoptium
 
 List of recognized vendors:
 
-[cols="~,~,~"]
+[%autowidth.stretch]
 |===
 |Known Vendors |Acceptable Strings |`toolchainVendor` Value
 
